js ar betor css apply

--- a/dom.html
+++ b/dom.html
@@ -42,6 +42,7 @@
         third.style.color = 'green'
         third.style.backgroundColor = 'salmon'
         third.style.padding = '10px'
+        third.style.fontSize = '10px'
      </script>
 </body>
 </html>
